# musicviz

./: .gitignore  AGENTS.md  LICENSE  README.md  project.yaml  pyproject.toml
docs/: development-guide.md  render-history.md  render-spike.md  roadmap.md  test-fixtures.md
docs/agent-guides/: project-scope.md  repository-workflow.md  session-notes.md
docs/sessions/: 2026-07-20-01-repository-setup.md  2026-07-20-02-phase-0-baseline.md  2026-07-20-03-phase-1-slow-zoom.md  2026-07-20-04-phase-2-waveform.md  2026-07-20-05-phase-3-text.md  2026-07-20-06-phase-4-python-wrapper.md  2026-07-21-01-phase-5-project-config.md  2026-07-21-02-phase-6-cli.md
musicviz/: __init__.py  cli.py  render.py
scripts/: make_video.py
tests/: test_cli.py  test_make_video.py  test_render_integration.py
